--- a/acarshub-typescript/src/css/_utilities.scss
+++ b/acarshub-typescript/src/css/_utilities.scss
@@ -27,11 +27,11 @@
 
 // Display utilities
 .display-inline-block {
-  display: inline-block;
+  display: inline-block !important;
 }
 
 .display-none {
-  display: none;
+  display: none !important;
 }
 
 // Width utilities
